# EZOpenAPP-Linux

./: .gitignore  CMakeLists.txt  README.md
py/: es_open_stream.py
src/: app_config.h  app_manager.cpp  app_manager.h  args_parser.cpp  args_parser.h  main.cpp  singleton.h
